--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,15 +26,18 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.google.guava:guava:18.0'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.guava:guava:18.0'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.microsoft.azure:azure-mobile-android:3.3.0@aar'
     compile 'com.microsoft.azure:azure-notifications-handler:1.0.1@jar'
+    compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
 }
