--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ToDoActivity"></activity>
+        <activity android:name=".ToDoActivity" />
+        <activity android:name=".camera"></activity>
     </application>
 
 </manifest>
