--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,7 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home" />
         <activity android:name=".addIngredient" />
-
+        <activity android:name=".ShowCanCook"></activity>
     </application>
 
 </manifest>
