--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     }
 
 
+
     compile 'com.facebook.android:facebook-android-sdk:4.24.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.guava:guava:20.0'
@@ -41,6 +42,7 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'in.srain.cube:grid-view-with-header-footer:1.0.12'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
 }
 
