--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -86,7 +87,12 @@
             android:label="@string/title_activity_home" />
         <activity android:name=".addIngredient" />
         <activity android:name=".WrongIngredient" />
-        <activity android:name=".ref.EmptyActivity"></activity>
+
+        <service android:name=".module.AlarmService"
+            android:enabled="true" />
+
+        <receiver android:name=".module.Receiver"/>
+
     </application>
 
 </manifest>
