--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cookzyme.cookzyme"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="com.example.cookzyme.cookzyme">
+    <!--android:versionCode="1"-->
+    <!--android:versionName="1.0"-->
+
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
-    <provider
-        android:name="com.facebook.FacebookContentProvider"
-        android:authorities="com.facebook.app.FacebookContentProvider255779318241603"
-        android:exported="true" />
+    <!--<provider-->
+        <!--android:name="com.facebook.FacebookContentProvider"-->
+        <!--android:authorities="com.facebook.app.FacebookContentProvider255779318241603"-->
+        <!--android:exported="true" />-->
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
